[gd_scene load_steps=3 format=3 uid="world_scene_1"]
[ext_resource path="res://player.gd" type="Script" id=1]
[node name="World" type="Node3D"]
script = ExtResource( 1 )
[node name="ResourceRoot" type="Node3D" parent="." ]
[node name="BuildingRoot" type="Node3D" parent="." ]
[node name="LocalPlayer" type="MeshInstance3D" parent="." ]
mesh = null
